# mcp-demo

./: .env.example  .gitignore  README.md  WEB_SERVICE_README.md  mcp_agent_config.json  pyproject.toml  test_client.py
.github/instructions/: PythonSSDLCAddendum.instructions.md  git-commit-guidelines.instructions.md  python.instructions.md  python_commenting.instructions.md  python_formatting.instructions.md  python_security.instructions.md  python_testing.instructions.md  scalability_optimization_rule.instructions.md
agent/: agent.py  agent_config.py
backend/: agent.py  auth_mcp_server.py  jira_mcp_server.py  sharepoint_mcp_server.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
servers/: auth_groups_roles.py  auth_mcp_server.py  auth_utils.py  datasets.py  decorators.py  medicare_server.py
tests/: server-test.ps1  test_agent.py  test_client.py
