[project]
name = "mcp-server-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "azure-identity>=1.23.1",
    "fastapi[standard]>=0.116.1",
    "fastmcp>=2.10.6",
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "msgraph-sdk>=1.40.0",
    "pyopenssl>=25.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "uvicorn>=0.24.0",
]
